language/spec/grammar.ebnf
(* Sigil Programming Language - Surface Grammar Sketch *)
(* This grammar documents the current parser surface at a high level. *)
(* Canonical source is printer-first. The parser accepts the structural surface,
   then the compiler compares the original source against the internal canonical
   printer output. Semantic canonicality checks that are not pure printing still
   run in validation/typecheck. *)

Program = { TopLevelDecl } ;

TopLevelDecl = TypeDecl
             | ExternDecl
             | ConstDecl
             | FunctionDecl
             | TestDecl ;

(* Canonical declaration order is enforced separately:
   t => e => c => λ => test *)

ModulePath = RootedModulePath ;
RootedModulePath = RootSigil , Identifier , { "::" , Identifier } ;
RootSigil = "§" | "•" | "¶" | "¤" | "†" | "※" ;

ExternDecl = "e" , ModulePath , [ ":" , TypedMembers ] ;
TypedMembers = "{" , TypedMember , { "," , TypedMember } , "}" ;
TypedMember = Identifier , ":" , Type ;

TypeDecl = "t" , TypeName , [ TypeParams ] , "=" , TypeDef , [ "where" , Expr ] ;
TypeName = UpperIdentifier ;
TypeParams = "[" , TypeParam , { "," , TypeParam } , "]" ;
TypeParam = UpperIdentifier ;

TypeDef = SumType | ProductType | TypeAlias ;
SumType = Variant , { "|" , Variant } ;
Variant = UpperIdentifier , [ "(" , TypeList , ")" ] ;
ProductType = "{" , FieldList , "}" ;
FieldList = Field , { "," , Field } ;
Field = Identifier , ":" , Type ;
TypeAlias = Type ;

Type = PrimitiveType
     | ListType
     | MapType
     | FunctionType
     | TypeConstructor
     | TypeVariable
     | QualifiedType ;

PrimitiveType = "Int" | "Float" | "Bool" | "String" | "Char" | "Unit" | "Never" ;
ListType = "[" , Type , "]" ;
MapType = "{" , Type , "↦" , Type , "}" ;
FunctionType = "λ(" , [ TypeList ] , ")" , "=>" , [ Effects ] , Type ;
TypeConstructor = TypeName , [ "[" , TypeList , "]" ] ;
TypeVariable = UpperIdentifier ;
QualifiedType = RootedQualifiedType | ProjectTypeRef ;
RootedQualifiedType = RootedModulePath , "." , TypeName , [ "[" , TypeList , "]" ] ;
ProjectTypeRef = "µ" , TypeName , [ "[" , TypeList , "]" ] ;
TypeList = Type , { "," , Type } ;

ConstDecl = "c" , Identifier , "=" , "(" , Expr , ":" , Type , ")" ;

FunctionDecl = "λ" , Identifier , "(" , [ ParamList ] , ")" , "=>" , [ Effects ] , Type , FunctionBody ;
FunctionBody = "=" , Expr | MatchExpr ;

ParamList = Param , { "," , Param } ;
Param = Identifier , ":" , Type ;

TestDecl = "test" , StringLiteral , [ "=>" , Effects ] , [ TestWorldClause ] , BlockExpr ;
TestWorldClause = "world" , "{" , { ConstDecl } , "}" ;

Effects = Effect , { Effect } ;
Effect = "!" , UpperIdentifier ;

Expr = LetExpr
     | MatchExpr
     | LambdaExpr
     | ConcurrentExpr
     | ListOpExpr
     | BinaryExpr ;

LetExpr = "l" , Pattern , "=" , Expr , ";" , Expr ;

LambdaExpr = "λ" , "(" , [ ParamList ] , ")" , "=>" , [ Effects ] , Type , LambdaBody ;
LambdaBody = "=" , Expr | MatchExpr ;

ConcurrentExpr = "concurrent" , Identifier , "@" , ConcurrentWidth , [ ":" , ConcurrentPolicy ] , "{" , ConcurrentStep , { ConcurrentStep } , "}" ;
ConcurrentWidth = Expr ;
ConcurrentPolicy = "{" , ConcurrentPolicyField , { "," , ConcurrentPolicyField } , "}" ;
ConcurrentPolicyField = "jitterMs" , ":" , Expr
                      | "stopOn" , ":" , Expr
                      | "windowMs" , ":" , Expr ;
ConcurrentStep = SpawnStep | SpawnEachStep ;
SpawnStep = "spawn" , Expr ;
SpawnEachStep = "spawnEach" , Expr , Expr ;

ListOpExpr = Expr , "map" , Expr
           | Expr , "filter" , Expr
           | Expr , "reduce" , Expr , "from" , Expr ;

MatchExpr = "match" , Expr , "{" , MatchArm , { "|" , MatchArm } , "}" ;
MatchArm = Pattern , "=>" , Expr ;

Pattern = LiteralPattern
        | VariablePattern
        | WildcardPattern
        | ConstructorPattern
        | ListPattern
        | RecordPattern ;

LiteralPattern = Literal ;
VariablePattern = Identifier ;
WildcardPattern = "_" ;
ConstructorPattern = ConstructorRef , [ "(" , PatternList , ")" ] ;
ConstructorRef = UpperIdentifier | QualifiedConstructorRef | ProjectConstructorRef ;
QualifiedConstructorRef = ModulePath , "." , UpperIdentifier ;
ProjectConstructorRef = "µ" , UpperIdentifier ;
ListPattern = "[" , [ PatternList ] , "]"
            | "[" , Pattern , "," , ".." , Identifier , "]" ;
RecordPattern = "{" , FieldPatternList , "}" ;
PatternList = Pattern , { "," , Pattern } ;
FieldPatternList = FieldPattern , { "," , FieldPattern } ;
FieldPattern = Identifier , [ ":" , Pattern ] ;

BlockExpr = "{" , Expr , "}" ;

(* Binary operator precedence and exact expression factoring live in the parser.
   This file records the available operator surface, not the full precedence table. *)
BinaryExpr = Expr , BinaryOp , Expr ;
BinaryOp = "+" | "-" | "*" | "/" | "%" | "^"
         | "=" | "≠" | "<" | ">" | "≤" | "≥"
         | "and" | "or"
         | "⧺" ;

Literal = IntegerLiteral
        | FloatLiteral
        | StringLiteral
        | CharLiteral
        | "true"
        | "false"
        | "(" , ")" ;

(* StringLiteral uses the ordinary "..." form.
   Current implementation allows literal newlines inside the quotes and preserves
   them exactly in the resulting string value. *)
