language/compiler/crates/sigil-parser/src/parser_impl.rs
//! Recursive descent parser implementation
//!
//! This parser converts a stream of tokens into an Abstract Syntax Tree (AST).
//! It matches the TypeScript parser implementation exactly for compatibility.

use crate::error::ParseError;
use sigil_ast::*;
use sigil_lexer::{Position, SourceLocation, Token, TokenType};

/// The Sigil parser
pub struct Parser {
    tokens: Vec<Token>,
    current: usize,
    filename: String,
}

impl Parser {
    /// Create a new parser from a token stream
    pub fn new(tokens: Vec<Token>, filename: impl Into<String>) -> Self {
        // Filter out newlines for parsing (but keep them in diagnostics)
        let tokens: Vec<Token> = tokens
            .into_iter()
            .filter(|t| t.token_type != TokenType::NEWLINE)
            .collect();

        Self {
            tokens,
            current: 0,
            filename: filename.into(),
        }
    }

    /// Parse the token stream into a Program AST
    pub fn parse(&mut self) -> Result<Program, ParseError> {
        let start = self.peek();
        let mut declarations = Vec::new();

        while !self.is_at_end() {
            declarations.push(self.declaration()?);
        }

        let end = self.previous();
        let location = self.make_location(start.location.start, end.location.end);

        Ok(Program::new(declarations, location))
    }

    // ========================================================================
    // DECLARATIONS
    // ========================================================================

    fn declaration(&mut self) -> Result<Declaration, ParseError> {
        // Label declaration: label Pii combines [Brazil,Paraguay]
        if self.match_identifier("label") {
            return self.label_declaration();
        }

        // Rule declaration: rule [•types.Pii] for •topology.auditLog=Allow()
        if self.match_identifier("rule") {
            return self.rule_declaration();
        }

        // Transform declaration: transform λredact(...)
        if self.match_identifier("transform") {
            self.consume(
                TokenType::LAMBDA,
                "Expected \"λ\" after transform (canonical form: transform λname(...))",
            )?;
            let Declaration::Function(function) = self.function_declaration()? else {
                unreachable!("function_declaration must return Declaration::Function");
            };
            return Ok(Declaration::Transform(TransformDecl { function }));
        }

        // Function declaration: λ identifier(params)...
        if self.match_token(TokenType::LAMBDA) {
            return self.function_declaration();
        }

        // Type declaration: t TypeName = ...
        if self.match_token(TokenType::TYPE) {
            return self.type_declaration();
        }

        // Effect declaration: effect AppIo=!Fs!Log!Process
        if self.match_token(TokenType::Effect) {
            return self.effect_declaration();
        }

        // Feature flag declaration: featureFlag NewCheckout:Bool createdAt "..." default false
        if self.match_identifier("featureFlag") {
            return self.feature_flag_declaration();
        }

        // Const declaration: c name = value
        if self.match_token(TokenType::CONST) {
            return self.const_declaration();
        }

        // Extern declaration: e module::path
        if self.match_token(TokenType::EXTERN) {
            return self.extern_declaration();
        }

        // Test declaration: test "description" { ... }
        if self.check_identifier("test") {
            self.advance();
            return self.test_declaration();
        }

        Err(self.error(
            "Expected top-level declaration (label, rule, transform, t, effect, featureFlag, e, c, λ, or test)",
        ))
    }

    fn feature_flag_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let name = self
            .consume(
                TokenType::UpperIdentifier,
                "Expected UpperCamel feature flag name after featureFlag",
            )?
            .value
            .clone();
        self.consume(TokenType::COLON, "Expected \":\" after feature flag name")?;
        let flag_type = self.parse_type()?;
        self.consume_identifier(
            "createdAt",
            "Expected createdAt clause after feature flag type (canonical form: featureFlag Name:Type createdAt \"...\" default value)",
        )?;
        let created_at = self
            .consume(
                TokenType::STRING,
                "Expected string literal after createdAt (canonical form: createdAt \"YYYY-MM-DDTHH-mm-ssZ\")",
            )?
            .clone();
        let created_at_value = created_at.value;
        let created_at_location = created_at.location;
        self.consume_identifier(
            "default",
            "Expected default clause after createdAt (canonical form: featureFlag Name:Type createdAt \"...\" default value)",
        )?;
        let default = self.expression()?;
        let end = self.previous();
        Ok(Declaration::FeatureFlag(FeatureFlagDecl {
            name,
            flag_type,
            created_at: created_at_value,
            created_at_location,
            default,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn function_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let name = self.consume_name_like("Expected function name")?.value;

        // Optional generic type parameters: λfunc[T,U](...)
        let mut type_params = Vec::new();
        if self.match_token(TokenType::LBRACKET) {
            loop {
                type_params.push(
                    self.consume(TokenType::UpperIdentifier, "Expected type parameter")?
                        .value
                        .clone(),
                );
                if !self.match_token(TokenType::COMMA) {
                    break;
                }
            }
            self.consume(TokenType::RBRACKET, "Expected \"]\" after type parameters")?;
        }

        self.consume(TokenType::LPAREN, "Expected \"(\" after function name")?;
        let params = self.parameter_list()?;
        self.consume(TokenType::RPAREN, "Expected \")\" after parameters")?;

        // Return type annotation is MANDATORY (canonical form)
        self.consume(
            TokenType::ARROW,
            &format!(
                "Expected \"=>\" after parameters for function \"{}\". Return type annotations are required (canonical form).",
                name
            ),
        )?;

        // Parse optional effect annotations: =>!Fs !Process Type
        let effects = self.parse_effects()?;

        let return_type = Some(self.parse_type()?);
        let requires = if self.match_token(TokenType::Requires) {
            Some(self.contract_clause_expression("requires")?)
        } else {
            None
        };
        let ensures = if self.match_token(TokenType::Ensures) {
            Some(self.contract_clause_expression("ensures")?)
        } else {
            None
        };

        if self.check(TokenType::Requires) || self.check(TokenType::Ensures) {
            return Err(self.error(
                "Function contracts use at most one requires and one ensures clause, in that order",
            ));
        }

        // Canonical form: = required UNLESS body starts with match expression
        let has_equal = self.match_token(TokenType::EQUAL);
        let is_match_expr = self.check(TokenType::MATCH);

        if is_match_expr && has_equal {
            return Err(self.error(
                "Unexpected \"=\" before match expression (canonical form: λf()=>T match ...)",
            ));
        } else if !is_match_expr && !has_equal {
            return Err(
                self.error("Expected \"=\" before function body (canonical form: λf()=>T=...)")
            );
        }

        let body = self.expression()?;

        let end = self.previous();
        let location = self.make_location(start.location.start, end.location.end);

        Ok(Declaration::Function(FunctionDecl {
            name,
            type_params,
            params,
            effects,
            return_type,
            requires,
            ensures,
            body,
            location,
        }))
    }

    fn contract_clause_expression(&mut self, clause_name: &str) -> Result<Expr, ParseError> {
        if self.is_at_end() {
            return Err(self.error(&format!("Expected expression after {} clause", clause_name)));
        }

        let start_index = self.current;
        let clause_line = self.peek().location.start.line;
        let mut end_index = start_index;
        while end_index < self.tokens.len() {
            let token = &self.tokens[end_index];
            if token.token_type == TokenType::EOF || token.location.start.line != clause_line {
                break;
            }
            end_index += 1;
        }

        if end_index == start_index {
            return Err(self.error(&format!("Expected expression after {} clause", clause_name)));
        }

        let mut clause_tokens = self.tokens[start_index..end_index].to_vec();
        let eof_location = clause_tokens
            .last()
            .map(|token| SourceLocation::single(token.location.end))
            .unwrap_or_else(|| SourceLocation::single(self.peek().location.start));
        clause_tokens.push(Token::new(TokenType::EOF, String::new(), eof_location));

        let mut subparser = Parser {
            tokens: clause_tokens,
            current: 0,
            filename: self.filename.clone(),
        };
        let expr = subparser.expression()?;
        if !subparser.is_at_end() {
            return Err(self.error(&format!(
                "{} clause must stay on one canonical line",
                clause_name
            )));
        }

        self.current = end_index;
        Ok(expr)
    }

    fn parameter_list(&mut self) -> Result<Vec<Param>, ParseError> {
        if self.check(TokenType::RPAREN) {
            return Ok(Vec::new());
        }

        let mut params = Vec::new();
        loop {
            let start = self.peek();
            let name = self
                .consume(TokenType::IDENTIFIER, "Expected parameter name")?
                .value
                .clone();

            // Type annotation is MANDATORY (canonical form)
            self.consume(
                TokenType::COLON,
                &format!(
                    "Expected \":\" after parameter \"{}\". Type annotations are required (canonical form).",
                    name
                ),
            )?;

            // Check for mut modifier
            let is_mutable = self.match_token(TokenType::MUT);

            let type_annotation = Some(self.parse_type()?);

            let end = self.previous();
            let location = self.make_location(start.location.start, end.location.end);

            params.push(Param {
                name,
                type_annotation,
                is_mutable,
                location,
            });

            if !self.match_token(TokenType::COMMA) {
                break;
            }
        }

        Ok(params)
    }

    fn type_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let name = self
            .consume(TokenType::UpperIdentifier, "Expected type name")?
            .value
            .clone();

        let mut type_params = Vec::new();
        if self.match_token(TokenType::LBRACKET) {
            loop {
                type_params.push(
                    self.consume(TokenType::UpperIdentifier, "Expected type parameter")?
                        .value
                        .clone(),
                );
                if !self.match_token(TokenType::COMMA) {
                    break;
                }
            }
            self.consume(TokenType::RBRACKET, "Expected \"]\"")?;
        }

        self.consume(TokenType::EQUAL, "Expected \"=\"")?;
        let definition = self.type_definition()?;
        let constraint = if self.match_identifier("where") {
            Some(self.expression()?)
        } else {
            None
        };
        let labels = if self.match_identifier("label") {
            self.label_ref_list_or_single()?
        } else {
            Vec::new()
        };

        if self.check_identifier("where") || self.check_identifier("label") {
            return Err(self.error(
                "Type declarations use at most one where clause followed by at most one label clause, in that order",
            ));
        }

        let end = self.previous();
        let location = self.make_location(start.location.start, end.location.end);

        Ok(Declaration::Type(TypeDecl {
            name,
            type_params,
            definition,
            constraint,
            labels,
            location,
        }))
    }

    fn label_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let name = self
            .consume(TokenType::UpperIdentifier, "Expected label name")?
            .value
            .clone();
        let combines = if self.match_identifier("combines") {
            self.label_ref_list_or_single()?
        } else {
            Vec::new()
        };
        let end = self.previous();
        Ok(Declaration::Label(LabelDecl {
            name,
            combines,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn rule_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let labels = self.label_ref_list_or_single()?;
        self.consume_identifier("for", "Expected \"for\" after rule labels")?;
        let boundary = self.member_ref(true, "Expected rooted boundary reference after for")?;
        self.consume(TokenType::EQUAL, "Expected \"=\" after rule boundary")?;
        let action = self.rule_action()?;
        let end = self.previous();
        Ok(Declaration::Rule(RuleDecl {
            labels,
            boundary,
            action,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn label_ref_list_or_single(&mut self) -> Result<Vec<LabelRef>, ParseError> {
        if self.match_token(TokenType::LBRACKET) {
            let mut labels = Vec::new();
            if !self.check(TokenType::RBRACKET) {
                loop {
                    labels.push(self.label_ref()?);
                    if !self.match_token(TokenType::COMMA) {
                        break;
                    }
                }
            }
            self.consume(TokenType::RBRACKET, "Expected \"]\" after label list")?;
            return Ok(labels);
        }

        Ok(vec![self.label_ref()?])
    }

    fn label_ref(&mut self) -> Result<LabelRef, ParseError> {
        if let Some(root) = self.match_project_type_root() {
            let start = root.location.start;
            self.consume(
                TokenType::DOT,
                "Expected \".\" after \"µ\" in label reference",
            )?;
            let name = self
                .consume(TokenType::UpperIdentifier, "Expected label name")?
                .value
                .clone();
            let end = self.previous().location.end;
            return Ok(LabelRef {
                module_path: project_types_module_path(),
                name,
                location: SourceLocation::new(start, end),
            });
        }

        if let Some(root) = self.match_root_token() {
            let start = root.location.start;
            let module_path = self.rooted_module_path(&root)?;
            self.consume(TokenType::DOT, "Expected \".\" after label namespace path")?;
            let name = self
                .consume(TokenType::UpperIdentifier, "Expected label name")?
                .value
                .clone();
            let end = self.previous().location.end;
            return Ok(LabelRef {
                module_path,
                name,
                location: SourceLocation::new(start, end),
            });
        }

        let token = self.consume(TokenType::UpperIdentifier, "Expected label name")?;
        Ok(LabelRef {
            module_path: Vec::new(),
            name: token.value,
            location: token.location,
        })
    }

    fn member_ref(&mut self, require_rooted: bool, message: &str) -> Result<MemberRef, ParseError> {
        if let Some(root) = self.match_root_token() {
            let start = root.location.start;
            let module_path = self.rooted_module_path(&root)?;
            self.consume(TokenType::DOT, "Expected \".\" after namespace path")?;
            let member = if let Some(token) = self.match_member_name() {
                token.value
            } else {
                return Err(self.error("Expected member name"));
            };
            let end = self.previous().location.end;
            return Ok(MemberRef {
                module_path,
                member,
                location: SourceLocation::new(start, end),
            });
        }

        if require_rooted {
            return Err(self.error(message));
        }

        if self.match_token(TokenType::IDENTIFIER) || self.match_token(TokenType::UpperIdentifier) {
            let token = self.previous();
            return Ok(MemberRef {
                module_path: Vec::new(),
                member: token.value,
                location: token.location,
            });
        }

        Err(self.error(message))
    }

    fn rule_action(&mut self) -> Result<RuleAction, ParseError> {
        if self.check(TokenType::UpperIdentifier) && self.peek().value == "Allow" {
            let start = self.advance();
            self.consume(TokenType::LPAREN, "Expected \"(\" after Allow")?;
            self.consume(TokenType::RPAREN, "Expected \")\" after Allow(")?;
            let end = self.previous();
            return Ok(RuleAction::Allow {
                location: SourceLocation::new(start.location.start, end.location.end),
            });
        }

        if self.check(TokenType::UpperIdentifier) && self.peek().value == "Block" {
            let start = self.advance();
            self.consume(TokenType::LPAREN, "Expected \"(\" after Block")?;
            self.consume(TokenType::RPAREN, "Expected \")\" after Block(")?;
            let end = self.previous();
            return Ok(RuleAction::Block {
                location: SourceLocation::new(start.location.start, end.location.end),
            });
        }

        if self.check(TokenType::UpperIdentifier) && self.peek().value == "Through" {
            let start = self.advance();
            self.consume(TokenType::LPAREN, "Expected \"(\" after Through")?;
            let transform =
                self.member_ref(false, "Expected transform reference inside Through(...)")?;
            self.consume(TokenType::RPAREN, "Expected \")\" after Through(...)")?;
            let end = self.previous();
            return Ok(RuleAction::Through {
                transform,
                location: SourceLocation::new(start.location.start, end.location.end),
            });
        }

        Err(self.error("Expected Allow(), Block(), or Through(transform)"))
    }

    fn effect_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let name = self
            .consume(TokenType::UpperIdentifier, "Expected effect name")?
            .value
            .clone();
        self.consume(TokenType::EQUAL, "Expected \"=\" after effect name")?;
        let effects = self.parse_effects()?;
        if effects.is_empty() {
            return Err(self.error("Expected at least one effect after \"=\""));
        }
        let end = self.previous();
        Ok(Declaration::Effect(EffectDecl {
            name,
            effects,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn type_definition(&mut self) -> Result<TypeDef, ParseError> {
        // Braced type definitions are either:
        // - Product types: {field:Type,...}
        // - Type aliases to map/record types: {K↦V} or similar
        if self.check(TokenType::LBRACE) {
            let checkpoint = self.current;
            self.advance(); // consume {

            let is_product = if self.check(TokenType::RBRACE) {
                true
            } else if self.check(TokenType::IDENTIFIER) {
                matches!(
                    self.tokens.get(self.current + 1).map(|t| &t.token_type),
                    Some(TokenType::COLON)
                )
            } else {
                false
            };

            self.current = checkpoint;

            if is_product {
                return self.product_type().map(TypeDef::Product);
            }

            let start = self.peek();
            let aliased_type = self.parse_type()?;
            let end = self.previous();
            return Ok(TypeDef::Alias(TypeAlias {
                aliased_type,
                location: self.make_location(start.location.start, end.location.end),
            }));
        }

        // Non-constructor type aliases, like λ(T)=>U or [T], should go straight
        // through the general type parser instead of the sum/constructor path.
        if !self.check(TokenType::UpperIdentifier) {
            let start = self.peek();
            let aliased_type = self.parse_type()?;
            let end = self.previous();
            return Ok(TypeDef::Alias(TypeAlias {
                aliased_type,
                location: self.make_location(start.location.start, end.location.end),
            }));
        }

        // Sum type or type alias
        let start = self.peek();
        let first_variant = self.variant_or_type()?;

        // Check if first_variant is a constructor (has parentheses)
        // If previous token is ), then parentheses were present
        let is_constructor = self.previous().token_type == TokenType::RPAREN;

        // If followed by |, it's a sum type
        if self.check(TokenType::PipeSep) {
            return self.sum_type(first_variant).map(TypeDef::Sum);
        }

        // If it's a constructor (has parentheses), treat as single-variant sum type
        if is_constructor {
            let end = self.previous();
            return Ok(TypeDef::Sum(SumType {
                variants: vec![Variant {
                    name: first_variant.name.clone(),
                    types: first_variant.type_args.clone(),
                    location: first_variant.location.clone(),
                }],
                location: self.make_location(start.location.start, end.location.end),
            }));
        }

        // Otherwise, type alias
        let end = self.previous();
        Ok(TypeDef::Alias(TypeAlias {
            aliased_type: Type::Constructor(first_variant),
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn variant_or_type(&mut self) -> Result<TypeConstructor, ParseError> {
        let start = self.peek();
        let name = self
            .consume(TokenType::UpperIdentifier, "Expected type or variant name")?
            .value
            .clone();

        let mut type_args = Vec::new();
        if self.match_token(TokenType::LPAREN) {
            if !self.check(TokenType::RPAREN) {
                loop {
                    type_args.push(self.parse_type()?);
                    if !self.match_token(TokenType::COMMA) {
                        break;
                    }
                }
            }
            self.consume(TokenType::RPAREN, "Expected \")\"")?;
        }

        let end = self.previous();
        Ok(TypeConstructor {
            name,
            type_args,
            location: self.make_location(start.location.start, end.location.end),
        })
    }

    fn sum_type(&mut self, first_variant: TypeConstructor) -> Result<SumType, ParseError> {
        let start_pos = first_variant.location.start;
        let mut variants = vec![Variant {
            name: first_variant.name,
            types: first_variant.type_args,
            location: first_variant.location,
        }];

        while self.match_token(TokenType::PipeSep) {
            let var_start = self.peek();
            let variant = self.variant_or_type()?;
            let var_end = self.previous();
            variants.push(Variant {
                name: variant.name,
                types: variant.type_args,
                location: self.make_location(var_start.location.start, var_end.location.end),
            });
        }

        let end_pos = self.previous().location.end;
        Ok(SumType {
            variants,
            location: SourceLocation::new(start_pos, end_pos),
        })
    }

    fn product_type(&mut self) -> Result<ProductType, ParseError> {
        let start = self.peek();
        self.consume(TokenType::LBRACE, "Expected \"{\"")?;

        let mut fields = Vec::new();
        if !self.check(TokenType::RBRACE) {
            loop {
                if self.check(TokenType::DOT) || self.check(TokenType::DOTDOT) {
                    return Err(self.record_exactness_error("record types"));
                }
                let field_start = self.peek();
                let name = self
                    .consume(TokenType::IDENTIFIER, "Expected field name")?
                    .value
                    .clone();
                self.consume(TokenType::COLON, "Expected \":\"")?;
                let field_type = self.parse_type()?;

                let field_end = self.previous();
                fields.push(Field {
                    name,
                    field_type,
                    location: self
                        .make_location(field_start.location.start, field_end.location.end),
                });

                if !self.match_token(TokenType::COMMA) {
                    break;
                }
            }
        }

        self.consume(TokenType::RBRACE, "Expected \"}\"")?;

        let end = self.previous();
        Ok(ProductType {
            fields,
            location: self.make_location(start.location.start, end.location.end),
        })
    }

    fn const_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();

        if self.check(TokenType::UpperIdentifier) {
            let bad = self.peek();
            return Err(ParseError::InvalidConstantName {
                file: self.filename.clone(),
                found: bad.value.clone(),
                line: bad.location.start.line,
                column: bad.location.start.column,
                location: bad.location,
            });
        }

        let name = self
            .consume(TokenType::IDENTIFIER, "Expected constant name")?
            .value
            .clone();

        self.consume(TokenType::EQUAL, "Expected \"=\" after constant name")?;
        let value = self.expression()?;

        // Value must be a type ascription (canonical form)
        let (type_annotation, actual_value) = match &value {
            Expr::TypeAscription(asc) => (Some(asc.ascribed_type.clone()), asc.expr.clone()),
            _ => {
                let loc = value.location();
                return Err(ParseError::UntypedConstant {
                    file: self.filename.clone(),
                    name: name.clone(),
                    line: loc.start.line,
                    column: loc.start.column,
                    location: loc,
                });
            }
        };

        let end = self.previous();
        Ok(Declaration::Const(ConstDecl {
            name,
            type_annotation,
            value: actual_value,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn extern_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let mut module_path = Vec::new();

        // Parse module path (e.g., fs::promises, axios, lodash)
        module_path.push(self.module_path_segment()?);

        // Handle namespace separators: fs::promises
        while self.match_token(TokenType::NamespaceSep) {
            module_path.push(self.module_path_segment()?);
        }

        if self.check(TokenType::SLASH) || self.check(TokenType::DOT) {
            let bad = self.peek();
            return Err(ParseError::InvalidNamespaceSeparator {
                file: self.filename.clone(),
                found: bad.value.clone(),
                line: bad.location.start.line,
                column: bad.location.start.column,
                location: bad.location,
            });
        }

        // Optional type annotation: e console : { log : (String) => Unit, ... }
        let members = if self.match_token(TokenType::COLON) {
            self.consume(
                TokenType::LBRACE,
                "Expected \"{\" after \":\" in typed extern declaration",
            )?;
            let mut members_list = Vec::new();

            while !self.check(TokenType::RBRACE) && !self.is_at_end() {
                let member_start = self.peek();
                let member_name = self
                    .consume(
                        TokenType::IDENTIFIER,
                        "Expected member name in extern type declaration",
                    )?
                    .value
                    .clone();
                self.consume(TokenType::COLON, "Expected \":\" after member name")?;
                let kind = if self.match_token(TokenType::Subscribes) {
                    ExternMemberKind::Subscription
                } else {
                    ExternMemberKind::Value
                };
                let member_type = self.parse_type()?;
                if matches!(kind, ExternMemberKind::Subscription)
                    && !matches!(member_type, Type::Function(_))
                {
                    return Err(self.error(
                        "Expected function type after \"subscribes\" in extern declaration",
                    ));
                }

                let member_end = self.previous();
                members_list.push(ExternMember {
                    name: member_name,
                    kind,
                    member_type,
                    location: self
                        .make_location(member_start.location.start, member_end.location.end),
                });

                // Allow comma as separator, break if we hit }
                if self.check(TokenType::RBRACE) {
                    break;
                }
                if !self.match_token(TokenType::COMMA) {
                    if !self.check(TokenType::RBRACE) {
                        return Err(self.error("Expected \",\" between extern members"));
                    }
                }
            }

            self.consume(TokenType::RBRACE, "Expected \"}\" after extern members")?;
            Some(members_list)
        } else {
            None
        };

        let end = self.previous();
        Ok(Declaration::Extern(ExternDecl {
            module_path,
            members,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn module_path_segment(&mut self) -> Result<String, ParseError> {
        let mut parts = Vec::new();

        // Consume first part
        if self.match_token(TokenType::IDENTIFIER)
            || self.match_token(TokenType::UpperIdentifier)
            || self.match_token(TokenType::INTEGER)
        {
            parts.push(self.previous().value.clone());
        } else {
            return Err(self.error("Expected module name"));
        }

        // Handle hyphenated names in extern/module strings like "sigil-cli"
        while self.match_token(TokenType::MINUS) {
            parts.push("-".to_string());
            if self.match_token(TokenType::IDENTIFIER)
                || self.match_token(TokenType::UpperIdentifier)
                || self.match_token(TokenType::INTEGER)
            {
                parts.push(self.previous().value.clone());
            } else {
                return Err(self.error("Expected module path segment after \"-\""));
            }
        }

        Ok(parts.join(""))
    }

    fn test_declaration(&mut self) -> Result<Declaration, ParseError> {
        let start = self.previous();
        let description = self
            .consume(TokenType::STRING, "Expected test description")?
            .value
            .clone();

        let effects = if self.match_token(TokenType::ARROW) {
            self.parse_effects()?
        } else {
            Vec::new()
        };

        let world_bindings = if self.match_identifier("world") {
            self.parse_test_world_bindings()?
        } else {
            Vec::new()
        };

        self.consume(TokenType::LBRACE, "Expected \"{\" before test body")?;
        let body = self.expression()?;
        self.consume(TokenType::RBRACE, "Expected \"}\" after test body")?;

        let end = self.previous();
        Ok(Declaration::Test(TestDecl {
            description,
            effects,
            world_bindings,
            body,
            location: self.make_location(start.location.start, end.location.end),
        }))
    }

    fn parse_test_world_bindings(&mut self) -> Result<Vec<ConstDecl>, ParseError> {
        self.consume(TokenType::LBRACE, "Expected \"{\" after world")?;
        let mut bindings = Vec::new();

        while !self.check(TokenType::RBRACE) {
            self.consume(
                TokenType::CONST,
                "Expected world binding declaration starting with \"c\"",
            )?;
            let decl = self.const_declaration()?;
            match decl {
                Declaration::Const(const_decl) => bindings.push(const_decl),
                _ => unreachable!("const_declaration must return Declaration::Const"),
            }
        }

        self.consume(TokenType::RBRACE, "Expected \"}\" after world bindings")?;
        Ok(bindings)
    }

    // ========================================================================
    // TYPES
    // ========================================================================

    fn parse_effects(&mut self) -> Result<Vec<String>, ParseError> {
        let mut effects = Vec::new();

        while self.match_token(TokenType::BANG) {
            if self.match_token(TokenType::UpperIdentifier) {
                effects.push(self.previous().value.clone());
            } else {
                return Err(self.error("Expected effect name after \"!\""));
            }
        }

        Ok(effects)
    }

    fn parse_type(&mut self) -> Result<Type, ParseError> {
        // Primitive types
        if self.match_token(TokenType::TypeInt) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::Int,
                location: loc,
            }));
        }
        if self.match_token(TokenType::TypeFloat) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::Float,
                location: loc,
            }));
        }
        if self.match_token(TokenType::TypeBool) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::Bool,
                location: loc,
            }));
        }
        if self.match_token(TokenType::TypeString) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::String,
                location: loc,
            }));
        }
        if self.match_token(TokenType::TypeChar) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::Char,
                location: loc,
            }));
        }
        if self.match_token(TokenType::TypeUnit) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::Unit,
                location: loc,
            }));
        }
        if self.match_token(TokenType::TypeNever) {
            let loc = self.previous().location;
            return Ok(Type::Primitive(PrimitiveType {
                name: PrimitiveName::Never,
                location: loc,
            }));
        }
